@@ -58,6 +58,7 @@ config = user.email APOCAL@cpan.org
 
 [GitHub::Create]
 prompt = 1
+repo = perl-{{lc($dist->name)}}
 
 ; this will fail if we said no to creating the github repository
 [Git::PushInitial]
